# testbed

./: .gitignore  pyproject.toml  test-draft.md  test-ready.md
.github/workflows/: ci.yml  code-review.yml
specs/add-hello-module/: implementation-summary.md  plan.md  progress.md  review-round-1.md  source-issue
specs/greet-module/: implementation-summary.md  plan.md  progress.md  review-round-1.md
src/: greet.py  hello.py
src/testbed/: greet.py  hello.py  snake.py
tests/: test_greet.py  test_hello.py  test_snake.py
