[project]
name = "testbed"
version = "0.1.0"
description = "A TUI snake game"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
snake = "testbed.snake:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testbed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
